--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.66.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
+    "sonner": "^2.0.7",
     "zod": "^4.0.0"
   },
   "devDependencies": {
